tests/fixtures/positive/licensing/oss-licenses-not-included-in-android/settings.gradle.kts
rootProject.name = "oss-licenses-not-included-in-android-positive"

include(":app")
