tests/fixtures/negative/licensing/oss-licenses-not-included-in-android/settings.gradle.kts
rootProject.name = "oss-licenses-not-included-in-android-negative"

include(":app")
